Revise bio in About Me section of index.html
Updated the 'About Me' section to reflect a new bio and removed redundant content.

--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
         </aside>
 
         <main class="content">
-            <h2>About Me</h2>
+            <h2>Bio</h2>
             <p>
-                I work at the intersection of physics, neuroscience, and data science, investigating how complex systems organize, adapt, and undergo disruption. My research integrates computational modeling, network theory, and probabilistic inference to explore dynamic patterns spanning cognition, language, and consciousness.
+            Aline Viol is a computational physicist with an interdisciplinary background spanning the natural and human sciences. She combines analytical precision with creative reasoning to bridge scientific research and technological innovation.
+ 
+             </p> Her expertise lies in computational modeling and the development of analytical tools to study how interactive patterns and probabilistic dependencies give rise to complex emergent behavior. With extensive experience in neuroscience and data science, she has developed computational frameworks and tools grounded in network theory, information theory, and probabilistic inference to uncover the mechanisms that shape brain dynamics, cognition, and human behavior.
 
-            </p> Raised in a family of artisans, I was trained from an early age to work with symmetries and to learn the art of breaking them with harmony. I bring this sensibility into my scientific work: an eye for detail, a deep perception of nuance, and a mindset that navigates between logic and intuition.
-
-        </p> I am driven by intellectual challenges that resist simple answers, problems that demand precision, scientific rigor, and creativity. I enjoy building models, designing metrics, and contributing ideas that help refine and expand theoretical frameworks.
-            </p>
+            </p> Her work is guided by a commitment to addressing complex scientific questions that demand rigor, precision, and creativity. She enjoys building models, designing metrics, and engaging in collaborations that connect science, technology, and conceptual understanding.
+             </p>
 
             <h2>Education</h2>
             <div style="display: flex; align-items: center;">
