Update project link in index.html

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <h2>Current Projects</h2>
                 <ul>      
                   
-                    <li>  <a href="https://intibrazil.weebly.com/" target="_blank">Main project: Biopsychology-informed characterization of antisocial individuals (Link)</a></li>
+                    <li>  <a href="https://intibrazil.weebly.com/aline-viol.html" target="_blank">Main project: Biopsychology-informed characterization of antisocial individuals (Link)</a></li>
                     <li>  Dynamical Systems Approaches to Mind State Transitions   </li>
                     <li> Integrating NLP and Network Theory for Cognitive Modeling  </li>
                 </ul>
