Fix typo in paragraph about scientific questions

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
  
              </p> Her expertise lies in computational modeling and the development of analytical tools to study how interactive patterns and probabilistic dependencies give rise to complex emergent behavior. With extensive experience in neuroscience and data science, she has developed computational frameworks and tools grounded in network theory, information theory, and probabilistic inference to uncover the mechanisms that shape brain dynamics, cognition, and human behavior.
 
-            </p> Her work is guided by a commitment to addressing complex scientific questions that demand rigor, precision, and creativity. She enjoys building models, designing metrics, and engaging in collaborations that connect science, technology, and conceptual understanding.
+            </p> Her work is guided by a commitment to addressing complex questions that demand rigor, precision, and creativity. She enjoys building models, designing metrics, and engaging in collaborations that connect science, technology, and conceptual understanding.
              </p>
 
             <h2>Education</h2>
