--- a/index.html
+++ b/index.html
@@ -40,16 +40,38 @@
             </p>
         </aside>
 
-        <main class="content">
-            <h2>Bio</h2>
-            <p>
-            Aline Viol is a computational physicist with an interdisciplinary background spanning the natural and human sciences. She combines analytical precision with creative reasoning to bridge scientific research and technological innovation.
- 
-             </p> Her expertise lies in computational modeling and the development of analytical tools to study how interactive patterns and probabilistic dependencies give rise to complex emergent behavior. With extensive experience in neuroscience and data science, she has developed computational frameworks and tools grounded in network theory, information theory, and probabilistic inference to uncover the mechanisms that shape brain dynamics, cognition, and human behavior.
+       <main class="content" lang="en">
+  <h2>Bio</h2>
 
-            </p> Her work is guided by a commitment to addressing complex questions that demand rigor, precision, and creativity. She enjoys building models, designing metrics, and engaging in collaborations that connect science, technology, and conceptual understanding.
-             </p>
+  <p>
+    Aline Viol is a computational physicist with an interdisciplinary background spanning the natural and human sciences. She combines analytical precision with creative reasoning to bridge scientific research and technological innovation.
+  </p>
 
+  <p>
+    Her expertise lies in computational modeling and the development of analytical tools to study how interactive patterns and probabilistic dependencies give rise to complex emergent behavior. With extensive experience in neuroscience and data science, she has developed computational frameworks and tools grounded in network theory, information theory, and probabilistic inference to uncover the mechanisms that shape brain dynamics, cognition, and human behavior.
+  </p>
+
+  <p>
+    Her work is guided by a commitment to addressing complex questions that demand rigor, precision, and creativity. She enjoys building models, designing metrics, and engaging in collaborations that connect science, technology, and conceptual understanding.
+  </p>
+</main>
+
+<style>
+  /* Layout & readability */
+  .content {
+    max-width: 72ch;
+    margin: 0 auto;
+  }
+
+  .content p {
+    text-align: justify;              /* justify both left and right edges */
+    text-justify: inter-word;         /* improves spacing in some browsers */
+    hyphens: auto;                    /* enable soft hyphenation */
+    -webkit-hyphens: auto;
+    -ms-hyphens: auto;
+    line-height: 1.6;                 /* comfortable reading */
+  }
+</style>
             <h2>Education</h2>
             <div style="display: flex; align-items: center;">
                 <ul>
