--- a/index.html
+++ b/index.html
@@ -162,7 +162,9 @@
             </footer>
         </main>
     </div>
-
+  a {
+        text-transform: none; /* Change from uppercase to normal text */
+    }
 </body>
 </html>
 
