Fix closing tag for sidebar aside element

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <div class="container">
-        <aside class="sidebar">
+        </aside class="sidebar">
             <img src="photo_bw.jpg" alt="Aline's Photo" class="profile-pic">
             <h1>Aline Viol, PhD</h1>
             <p>Physics | Computational Neuroscience | Network Science | Data Science </p>
