Refactor index.html for improved content structure
Updated the sidebar and main content sections to improve structure and clarity. Adjusted educational and project details for accuracy.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <div class="container">
-        </aside class="sidebar">
+        <aside class="sidebar">
             <img src="photo_bw.jpg" alt="Aline's Photo" class="profile-pic">
             <h1>Aline Viol, PhD</h1>
             <p>Physics | Computational Neuroscience | Network Science | Data Science </p>
@@ -38,24 +38,20 @@
             <p>
                 <a href="http://lattes.cnpq.br/9378498918721758" target="_blank"><i class="fas fa-graduation-cap"></i> Lattes</a>
             </p>
+            <p>
+                <a href="https://www.ru.nl/donders/" target="_blank"><i class="fas fa-university"></i> University Webpage</a>
+            </p>
         </aside>
 
-       <main class="content" lang="en">
-  <h2>Bio</h2>
+        <main class="content">
+            <h2>About Me</h2>
+            <p>
+                I work at the intersection of physics, neuroscience, and data science, investigating how complex systems organize, adapt, and undergo disruption. My research integrates computational modeling, network theory, and probabilistic inference to explore dynamic patterns spanning cognition, language, and consciousness.
 
-  <p>
-    Aline Viol is a computational physicist with an interdisciplinary background spanning the natural and human sciences. She combines analytical precision with creative reasoning to bridge scientific research and technological innovation.
-  </p>
+            </p> Raised in a family of artisans, I was trained from an early age to work with symmetries and to learn the art of breaking them with harmony. I bring this sensibility into my scientific work: an eye for detail, a deep perception of nuance, and a mindset that navigates between logic and intuition.
 
-  <p>
-    Her expertise lies in computational modeling and the development of analytical tools to study how interactive patterns and probabilistic dependencies give rise to complex emergent behavior. With extensive experience in neuroscience and data science, she has developed computational frameworks and tools grounded in network theory, information theory, and probabilistic inference to uncover the mechanisms that shape brain dynamics, cognition, and human behavior.
-  </p>
-
-  <p>
-    Her work is guided by a commitment to addressing complex questions that demand rigor, precision, and creativity. She enjoys building models, designing metrics, and engaging in collaborations that connect science, technology, and conceptual understanding.
-  </p>
-</main>
-
+        </p> I am driven by intellectual challenges that resist simple answers, problems that demand precision, scientific rigor, and creativity. I enjoy building models, designing metrics, and contributing ideas that help refine and expand theoretical frameworks.
+            </p>
 
             <h2>Education</h2>
             <div style="display: flex; align-items: center;">
@@ -116,7 +112,7 @@
                 <h2>Current Projects</h2>
                 <ul>      
                   
-                    <li>  <a href="https://intibrazil.weebly.com/aline-viol.html" target="_blank">Main project: Biopsychology-informed characterization of antisocial individuals (Link)</a></li>
+                    <li>  <a href="https://intibrazil.weebly.com/" target="_blank">Main project: Biopsychology-informed characterization of antisocial individuals (Link)</a></li>
                     <li>  Dynamical Systems Approaches to Mind State Transitions   </li>
                     <li> Integrating NLP and Network Theory for Cognitive Modeling  </li>
                 </ul>
@@ -147,8 +143,10 @@
             </footer>
         </main>
     </div>
-  a {
+    a {
         text-transform: none; /* Change from uppercase to normal text */
     }
 </body>
 </html>
+
+
