Remove comment about text-transform style

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </main>
     </div>
     a {
-        text-transform: none; /* Change from uppercase to normal text */
+        text-transform: none; /*  */
     }
 </body>
 </html>
