Update CSS text-transform property comment

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </main>
     </div>
     a {
-        text-transform: none; /*  */
+        text-transform: none; /* ... */
     }
 </body>
 </html>
