Add styles for justified text in index.html
Added CSS styles to justify specific paragraphs.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,19 @@
         </p> Aline Viol is a computational physicist with an interdisciplinary background spanning the natural and human sciences. She combines analytical precision with creative reasoning to bridge scientific research and technological innovation. 
         </p> Her expertise lies in computational modeling and the development of analytical tools to study how interactive patterns and probabilistic dependencies give rise to complex emergent behavior. With extensive experience in neuroscience and data science, she has developed computational tools and frameworks grounded in network theory, information theory, and probabilistic inference to uncover the mechanisms that shape brain dynamics, cognition, and human behavior.
         </p> She is driven by intellectual challenges that resist simple answers, problems that require rigor, depth, and creativity. She enjoys building models, designing metrics, and engaging in collaborations that connect science, technology, and conceptual understanding.    
-  <p>
+        <p>
+<style>
+  /* Justify only these paragraphs */
+  h2 + p, h2 + p + p, h2 + p + p + p {
+    text-align: justify;
+    text-justify: inter-word;
+    hyphens: auto;
+    line-height: 1.6;
+    max-width: 72ch;
+    margin: 0 0 1rem 0;
+  }
+</style>
+      
             <h2>Education</h2>
             <div style="display: flex; align-items: center;">
                 <ul>
