Change header from 'Bibdo' to 'Bio'

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </aside>
 
         <main class="content">
-            <h2>Bibdo</h2>
+            <h2>Bio</h2>
             <p>
         </p> Aline Viol is a computational physicist with an interdisciplinary background spanning the natural and human sciences. She combines analytical precision with creative reasoning to bridge scientific research and technological innovation. 
         </p> Her expertise lies in computational modeling and the development of analytical tools to study how interactive patterns and probabilistic dependencies give rise to complex emergent behavior. With extensive experience in neuroscience and data science, she has developed computational tools and frameworks grounded in network theory, information theory, and probabilistic inference to uncover the mechanisms that shape brain dynamics, cognition, and human behavior.
