--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Aline Viol, PhD | Research Page</title>
+    <title>Aline Viol, Ph.D. | Research Page</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script> <!-- FontAwesome for icons -->
 </head>
@@ -146,7 +146,7 @@
             </section>
 
             <footer>
-                <p>&copy; 2025 Aline Viol, PhD | Hosted on GitLab Pages</p>
+                <p>&copy; 2025 Aline Viol, Ph.D. </p>
             </footer>
         </main>
     </div>
