Remove year from Donders Institute listing

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <ul>
                     <li><b></b>  IBM Thomas J. Watson Research Center - US  </li>
                     <li><b></b> Bernstein Center for Computational Neuroscience - DE  </li>
-                    <li><b>2009</b> Donders Institute for Brain, Cognition, and Behaviour -NL </li>
+                    <li><b></b> Donders Institute for Brain, Cognition, and Behaviour -NL </li>
                 </ul>
            
             </div>
