--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <div class="container">
         <aside class="sidebar">
-            <img src="photo_bw.jpg" alt="Aline's Photo" class="profile-pic">
+            <img src="foto.png" alt="Aline's Photo" class="profile-pic">
             <h1>Aline Viol, PhD</h1>
             <p>Physics | Computational Neuroscience | Network Science | Data Science </p>
             
