--- a/index.html
+++ b/index.html
@@ -23,7 +23,11 @@
 
     <div class="container">
         <aside class="sidebar">
-            <img src="foto.png" alt="Aline's Photo" class="profile-pic">
+            <img src="foto.png"
+                 alt="Aline Viol — portrait"
+                 class="profile-pic"
+                 loading="lazy"
+                 decoding="async">            
             <h1>Aline Viol, PhD</h1>
             <p>Physics | Computational Neuroscience | Network Science | Data Science </p>
             
@@ -76,7 +80,7 @@
                 <ul>
                     <li><b></b>  IBM Thomas J. Watson Research Center - US  </li>
                     <li><b></b> Bernstein Center for Computational Neuroscience - DE  </li>
-                    <li><b></b> Donders Institute for Brain, Cognition, and Behaviour -NL </li>
+                    <li><b></b> Donders Institute for Brain, Cognition, and Behaviour - NL </li>
                 </ul>
            
             </div>
