--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                  class="profile-pic"
                  loading="lazy"
                  decoding="async">            
-            <h1>Aline Viol, PhD</h1>
+            <h1>Aline Viol, Ph.D.</h1>
             <p>Physics | Computational Neuroscience | Network Science | Data Science </p>
             
             <h2>Contact</h2>
