--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <li><b>2009</b> B.Sc. in Physics </li>
                 </ul>
                 <figure style="margin-left: 220px;">
-                    <img src="edu.png  " alt="Education Illustration" style="width:150px; height:auto;" >
+                    <img src="edu1.png  " alt="Education Illustration" style="width:150px; height:auto;" >
                     <figcaption></figcaption>
                 </figure>
             </div>
