--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
 
 
-          <h2>Research centers</h2>
+          <h2>Research Centers</h2>
             <div style="display: flex; align-items: center;">
                 <ul>
                     <li><b></b>  IBM Thomas J. Watson Research Center - US  </li>
