--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             <li>Neural plasticity</li>
                             <li>Higher cognitive functions</li>
                             <li>Psychedelic states</li>
-                            <li>Psychopathic traits</li>
+                            <li>Personality  traits</li>
                         </ul>
                     </div>
                     <div style="flex: 1; padding: 8px; background-color: #f9f9f9; border-radius: 8px; font-size: 0.9em;">
