--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                         <ul>
                             <li>Brain dynamics</li>
                             <li>Neural plasticity</li>
+                            <li>Memory</li>     
                             <li>Higher cognitive functions</li>
                             <li>Psychedelic states</li>
                             <li>Personality  traits</li>
